--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,15 @@ steps:
       cd ./dist
       ls
 
-- task: PublishPipelineArtifact@1
-  displayName: 'Publish Build Artifacts'
-  inputs:
-    targetPath: 'dist'
+- task: CopyPublishBuildArtifacts@1  
+  displayName: 'Copy Publish Artifact'  
+  inputs:  
+    CopyRoot: dist  
+    Contents: '**'  
+    ArtifactName: release  
+    ArtifactType: Container  
+  
+- task: DownloadPipelineArtifact@2  
+  displayName: 'Download Pipeline Artifact'  
+  inputs:  
+    targetPath: ' $(Build.ArtifactStagingDirectory)/dist' 
