--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,17 +30,24 @@ steps:
 
 
 - task: ArchiveFiles@2
-  displayName: 'Archive files'
   inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)/dist/'
-    includeRootFolder: false
-    archiveType: zip
-    archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+    rootFolderOrFile: 'dist'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/release.zip'
     replaceExistingArchive: true
+    verbose: true
+
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/release.zip'
     ArtifactName: 'drop'
     publishLocation: 'Container'
 
+- task: CmdLine@2
+  inputs:
+    script: |
+      ls
+      cd $(Build.ArtifactStagingDirectory)
+      ls
