--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,33 +21,8 @@ steps:
     ng build --prod
   displayName: 'npm install and build'
 
-- task: CmdLine@2
-  inputs:
-    script: |
-      ls
-      cd ./dist
-      ls
-
-
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: 'dist'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/release.zip'
-    replaceExistingArchive: true
-    verbose: true
-
-
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/release.zip'
-    ArtifactName: 'drop'
+    PathtoPublish: 'dist'
+    ArtifactName: 'release'
     publishLocation: 'Container'
-
-- task: CmdLine@2
-  inputs:
-    script: |
-      ls
-      cd $(Build.ArtifactStagingDirectory)
-      ls
